force-app/main/default/objects/msmxSheet__ExecuteQuery__e/msmxSheet__ExecuteQuery__e.object-meta.xml
<CustomObject>
    <label>Mashmatrix Platform Event: Execute Query</label>
</CustomObject>