force-app/main/default/objects/msmxSheet__ExecuteQuery__e/fields/msmxSheet__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__ObjectName__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>