force-app/main/default/objects/msmxSheet__ExecuteQuery__e/fields/msmxSheet__Query__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__Query__c</fullName>
    <label>Query (SOQL)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>