force-app/main/default/objects/msmxSheet__ExecuteQuery__e/fields/msmxSheet__RecordNum__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__RecordNum__c</fullName>
    <label>Num of Queried Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>