force-app/main/default/objects/msmxSheet__ExecuteQuery__e/fields/msmxSheet__SheetId__c.field-meta.xml
<CustomField>
    <fullName>msmxSheet__SheetId__c</fullName>
    <label>Sheet ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>